// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buy a bit 1`] = `
Object {
  "balances": Object {
    "DAI": "10",
    "WETH": "10",
  },
  "buyAllowance": true,
  "buyAmount": "90",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "buy",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "0.5",
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "readyToProceed",
  "submit": null,
}
`;

exports[`change pair 1`] = `
Object {
  "balances": Object {
    "DAI": "10",
    "WETH": "10",
  },
  "buyAllowance": true,
  "buyAmount": undefined,
  "buyToken": "WETH",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": undefined,
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [],
    "sell": Array [],
    "spread": undefined,
  },
  "sellAllowance": true,
  "sellAmount": undefined,
  "sellToken": "DAI",
  "sellTokenDigits": 5,
  "stage": "editing",
  "submit": null,
}
`;

exports[`complex scenario 1`] = `
Object {
  "balances": Object {
    "DAI": "10",
    "WETH": "10",
  },
  "buyAllowance": true,
  "buyAmount": undefined,
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": undefined,
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": undefined,
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "editing",
  "submit": null,
}
`;

exports[`complex scenario 2`] = `
Object {
  "balances": Object {
    "DAI": "10",
    "WETH": "10",
  },
  "buyAllowance": true,
  "buyAmount": "180",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "buy",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "1",
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "readyToProceed",
  "submit": null,
}
`;

exports[`complex scenario 3`] = `
Object {
  "balances": Object {
    "DAI": "10",
    "WETH": "10",
  },
  "buyAllowance": true,
  "buyAmount": "360",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "sell",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "2",
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "readyToProceed",
  "submit": null,
}
`;

exports[`complex scenario 4`] = `
Object {
  "balances": Object {
    "DAI": "10",
    "WETH": "10",
  },
  "buyAllowance": true,
  "buyAmount": undefined,
  "buyToken": "WETH",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": "sell",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": undefined,
  "sellToken": "DAI",
  "sellTokenDigits": 5,
  "stage": "editing",
  "submit": null,
}
`;

exports[`initial state 1`] = `
Object {
  "balances": Object {
    "DAI": "10",
    "WETH": "10",
  },
  "buyAllowance": true,
  "buyAmount": undefined,
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimationStatus": "unset",
  "gasPrice": "0.01",
  "kind": undefined,
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [],
    "sell": Array [],
    "spread": undefined,
  },
  "sellAllowance": true,
  "sellAmount": undefined,
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "editing",
  "submit": null,
}
`;

exports[`sell a bit 1`] = `
Object {
  "balances": Object {
    "DAI": "10",
    "WETH": "10",
  },
  "buyAllowance": true,
  "buyAmount": "180",
  "buyToken": "DAI",
  "buyTokenDigits": 2,
  "dustLimitBase": "0.1",
  "dustLimitQuote": "0.1",
  "etherPriceUsd": "1",
  "gasEstimation": 40,
  "gasEstimationEth": "4e-19",
  "gasEstimationStatus": "calculated",
  "gasEstimationUsd": "4e-19",
  "gasPrice": "0.01",
  "kind": "sell",
  "messages": Array [],
  "orderbook": Object {
    "blockNumber": 1,
    "buy": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "180",
        "quoteAmount": "1800",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "sell": Array [
      Object {
        "baseAmount": "10",
        "baseToken": "",
        "offerId": "1",
        "ownerId": "",
        "price": "200",
        "quoteAmount": "2000",
        "quoteToken": "",
        "timestamp": 2019-02-19T00:00:00.000Z,
        "type": "buy",
      },
    ],
    "spread": "20",
  },
  "sellAllowance": true,
  "sellAmount": "1",
  "sellToken": "WETH",
  "sellTokenDigits": 5,
  "stage": "readyToProceed",
  "submit": null,
}
`;
